--- a/public/uploads/.gitignore
+++ b/public/uploads/.gitignore
@@ -6,9 +6,13 @@
 !/techs/
 !/techs/1.png
 !/techs/2.png
-# !/techs/3.pdf
-# !/techs/4.svg
-# !/techs/5.png
-# !/techs/6.jpg
-# !/techs/7.pdf
-# !/techs/8.svg
+!/techs/3.png
+!/techs/4.png
+!/techs/5.jpg
+!/techs/6.png
+!/techs/7.png
+!/techs/8.png
+!/techs/9.png
+!/techs/10.png
+!/techs/11.jpeg
+!/techs/12.png
