--- a/fly.toml
+++ b/fly.toml
@@ -1,10 +1,12 @@
-# fly.toml app configuration file generated for developer-dictionary on 2023-05-08T13:35:37Z
+# fly.toml app configuration file generated for developer-dictionary on 2023-09-04T16:38:31Z
 #
 # See https://fly.io/docs/reference/configuration/ for information about how to use this file.
 #
 
 app = "developer-dictionary"
 primary_region = "ewr"
+
+[build]
 
 [http_service]
   internal_port = 80
