--- a/fly.toml
+++ b/fly.toml
@@ -1,4 +1,4 @@
-# fly.toml app configuration file generated for developer-dictionary on 2023-09-04T16:38:31Z
+# fly.toml app configuration file generated for developer-dictionary on 2023-09-09T12:50:26-04:00
 #
 # See https://fly.io/docs/reference/configuration/ for information about how to use this file.
 #
